[package]
name = "kawaii-kinetics"
version = "0.1.0"
edition = "2021"

[dependencies]
aniscraper = "0.1.2"
axum = "0.7.5"
moka = { version = "0.12.8", features = ["future"] }
serde = "1.0.210"
serde_json = "1.0.128"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
